# ElementalsLib

./: CMakeLists.txt  README.md
docs/: Doxyfile  Doxyfile.in  mainpage.dox  types.dox
inc/: builders.h  destroyers.h  elem_t.h  elementals.h  getters.h  setters.h  tracker.h
src/: CMakeLists.txt  builders.c  destroyers.c  elem_t.c  getters.c  setters.c  tracker.c
tests/: CMakeLists.txt  tests.c
